feat: database references
