# src/models/feedback-model.ts
@@ -2,8 +2,8 @@ export type FeedbackModel = {
     id: number;
     title: string;
     description: string;
-    category: "Функциональность" | "Баг" | "UI" | "Производительность";
-    status: 'Идея' | 'Запланировано' | 'В_работе' | 'Выполнено';
+    categoryId: number;
+    statusId: number;
     createdAt: Date;
     updatedAt: Date;
     authorId: number;
